--- a/data/interface/index.css
+++ b/data/interface/index.css
@@ -25,6 +25,29 @@ body {
   width: 100%;
   height: 100%;
   outline: none;
+  cursor: none;
+}
+
+.canvas-container {
+  pointer-events: auto;
+}
+
+.upper-canvas {
+  cursor: none !important;
+}
+
+#cursor {
+  width: 12px;
+  height: 12px;
+  border: 1px solid #AEAEAE;
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+}
+
+#crosshair {
+  display: none;
+  position: absolute;
 }
 
 .controls {
@@ -35,7 +58,12 @@ body {
   top: 21px;
   right: 21px;
   border-radius: 12px;
-  background: rgb(255,255,255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0.7) 100%
+  );
+  backdrop-filter: blur(40px);
 }
 
 .options {
@@ -51,7 +79,6 @@ body {
   padding: 0;
   text-align: left;
   margin-bottom: 10px;
-  background-color: #fff;
 }
 
 .item:last-child {
@@ -65,6 +92,7 @@ body {
   width: 100%;
   margin-bottom: 12px;
   pointer-events: none;
+  user-select: none;
 }
 
 #shrink {
@@ -75,42 +103,24 @@ body {
   padding: 3px 32px 6px 32px;
   margin: 4px;
 }
+
 #shrink:hover {
   opacity: 0.9;
 }
+
 .toggle:checked ~ #shrink > svg {
   transform: rotate(180deg);
 }
+
 .collapsible-content {
   max-height: 0px;
   overflow: hidden;
   transition: max-height 0.25s ease-in-out;
 }
+
 .toggle:checked + .collapsible-content {
   max-height: 350px;
 }
-
-
-.controls .options .item #Spray {background: url('icons/Spray.png') no-repeat center center}
-.controls .options .item #Pencil {background: url('icons/Pencil.png') no-repeat center center}
-.controls .options .item #Circle {background: url('icons/Dotted.png') no-repeat center center}
-
-.controls .options .item #Rect {background: url('icons/Rect.png') no-repeat center center}
-.controls .options .item #Line {background: url('icons/Line.png') no-repeat center center}
-.controls .options .item #Move {background: url('icons/Move.png') no-repeat center center}
-.controls .options .item #Circle {background: url('icons/Circle.png') no-repeat center center}
-.controls .options .item #Hexagon {background: url('icons/Hexagon.png') no-repeat center center}
-.controls .options .item #Octagon {background: url('icons/Octagon.png') no-repeat center center}
-.controls .options .item #Triangle {background: url('icons/Triangle.png') no-repeat center center}
-
-.controls .button #copy {background: url('icons/Copy.png') no-repeat center center}
-.controls .button #save {background: url('icons/Save.png') no-repeat center center}
-.controls .button #hide {background: url('icons/Hide.png') no-repeat center center}
-.controls .button #paste {background: url('icons/Paste.png') no-repeat center center}
-.controls .button #clear {background: url('icons/Clear.png') no-repeat center center}
-.controls .button #remove {background: url('icons/Remove.png') no-repeat center center}
-.controls .button #zoom-in {background: url('icons/Zoom-in.png') no-repeat center center}
-.controls .button #zoom-out {background: url('icons/Zoom-out.png') no-repeat center center}
 
 .hide {
   display: none;
@@ -199,46 +209,8 @@ input[type=range]::-moz-range-thumb {
   outline: none;
   cursor: pointer;
   max-width: 48px;
-  background: #fff;
   box-sizing: border-box;
   vertical-align: middle;
-}
-
-.controls .button button {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  color: #555;
-  width: 100%;
-  height: 38px;
-  outline: none;
-  cursor: pointer;
-  font-size: 12px;
-  max-width: 38px;
-  text-decoration: none;
-  background-color: #fff;
-  background-size: 16px !important;
-  transition: 300ms ease background-color;
-}
-
-.controls .button button:hover {
-  background-color: rgba(0,0,0,0.1);
-}
-
-.controls .options .info {
-  padding: 0;
-  width: 38px;
-  color: #333;
-  float: right;
-  height: 38px;
-  font-size: 11px;
-  overflow: hidden;
-  line-height: 38px;
-  text-align: right;
-  white-space: nowrap;
-  background-color: #fff;
-  vertical-align: middle;
-  text-overflow: ellipsis;
 }
 
 .canvas-container, .canvas-container canvas {
@@ -246,7 +218,6 @@ input[type=range]::-moz-range-thumb {
   outline: none;
   max-width: 100vw;
   height: 100vw !important;
-  border-bottom: solid 1px rgba(0,0,0,0.1);
 }
 
 html[context="popup"] .actions {left: 1px}
@@ -263,22 +234,8 @@ html[context="page"] .actions {
   left: 1px;
 }
 
-html[context="page"] .close > table tr td, 
-html[context="page"] .actions > table tr td {
-  background-color: #1e90ff;
-}
-
-html[context="page"] .close > table tr td svg, 
-html[context="page"] .actions > table tr td svg {
-  fill: #fff;
-}
-
-html[context="page"] .toolbar {
-  display: none;
-}
-
 html[context="page"] .controls {
-  box-shadow: 0 1px 14.8px #BCBECA;
+  box-shadow: 0 1px 14.8px #404B8E61;
 }
 
 html[context="webapp"] .toolbar {
@@ -327,8 +284,8 @@ html[context="webapp"] .controls {
   height: 0;
   overflow: hidden;
   background: var(--menu-bg);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(40px);
+          backdrop-filter: blur(40px);
   position: fixed;
   top: var(--top);
   left: var(--left);
@@ -341,7 +298,7 @@ html[context="webapp"] .controls {
   display: flex;
   flex-direction: column;
   z-index: 999999999;
-  box-shadow: 0 0 0 1px var(--menu-border), 0 2px 2px rgba(0, 0, 0, 0.03), 0 4px 4px rgba(0, 0, 0, 0.04), 0 10px 8px rgba(0, 0, 0, 0.05), 0 15px 15px rgba(0, 0, 0, 0.06), 0 30px 30px rgba(0, 0, 0, 0.07), 0 70px 65px rgba(0, 0, 0, 0.09);
+  box-shadow: 0 1px 14.8px #404B8E61;
 }
 .contextMenu-item {
   padding: 4px;
@@ -382,9 +339,9 @@ html[context="webapp"] .controls {
 }
 .contextMenu[data-theme=light] {
   --menu-bg: linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.45) 0%,
-    rgba(255, 255, 255, 0.85) 100%
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0.7) 100%
   );
   --menu-border: rgba(0, 0, 0, 0.08);
   --item-border: rgba(0, 0, 0, 0.1);
