--- a/data/interface/index.css
+++ b/data/interface/index.css
@@ -39,15 +39,50 @@ body {
 #cursor {
   width: 12px;
   height: 12px;
-  border: 1px solid #AEAEAE;
-  border-radius: 50%;
-  display: none;
   position: absolute;
+  z-index: 2147424647;
+  cursor: none;
+  pointer-events: none;
 }
 
-#crosshair {
-  display: none;
+#cursor > .cursor {
   position: absolute;
+  backdrop-filter: invert(100%);
+}
+
+#cursor > .cursor.brush {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+#cursor > .cursor.brush > div {
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+  backdrop-filter: invert(100%);
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  border-radius: 50%;
+}
+
+#cursor > .cursor.crosshair {
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+  display: none;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1.4px;
+  backdrop-filter: invert(100%);
+  width: 70%;
+  height: 70%;
+}
+
+#cursor > .cursor.crosshair > div {
+  backdrop-filter: invert(100%);
 }
 
 .controls {
@@ -57,6 +92,7 @@ body {
   position: fixed;
   top: 21px;
   right: 21px;
+  z-index: 2147484647;
   border-radius: 12px;
   background: white;
   backdrop-filter: blur(40px);
