Fix custom styles

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,7 +4,12 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
-<link rel="stylesheet" href="/_assets/css/style.css">
+<style>
+    a {
+        color: #0169FF !important;
+        font-weight: 400 !important;
+    }
+</style>
 <link rel="apple-touch-icon" sizes="180x180" href="/_assets/ico/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/_assets/ico/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/_assets/ico/favicon-16x16.png">
