--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -17,5 +17,6 @@
 <link rel="mask-icon" href="/assets/ico/safari-pinned-tab.svg" color="#0169ff">
 <meta name="msapplication-TileColor" content="#0169ff">
 <meta name="theme-color" content="#ffffff">
+<script defer data-domain="marker.ink" src="https://plausible.io/js/plausible.js"></script>
 
 <!-- end custom head snippets -->
